--- a/QuanLyKhoHang/GiaoDien/fmLoaiSanPham.resx
+++ b/QuanLyKhoHang/GiaoDien/fmLoaiSanPham.resx
@@ -142,4 +142,7 @@
         nJgGH5IaP3SVf+ox/wELJLyjtxFKtAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="bunifuDragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>117, 17</value>
+  </metadata>
 </root>
